apps/base/frigate/frigate-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-ingressroute
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=frigate}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "frigate"
    gethomepage.dev/description: "NVR with AI object detection"
    gethomepage.dev/app: frigate
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "frigate.png"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`${SUBDOMAIN:=frigate}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: frigate
          port: 5000
